# PySpinMultiCam

./: pyproject.toml
.github/workflows/: push_new_wheel.yml
