[build-system]
requires = [
    "hatchling", 
    "setuptools",
]
build-backend = "hatchling.build"

[project]
name = "PySpinMultiCam"
version = "0.0.1"
authors = [
  { name="Hamish Mehaffey" },
]
description = "Simple library for controlling/syncing multiple Spinnaker (Blackfly) cams"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PySpin",
]

[project.urls]
Homepage = "https://github.com/whmehaffey/PySpinMultiCam"